# 2021_school

./: .gitignore  .gitmodules  README.md
AIDataSociety/: README.md
AIDataSociety/asgmt1/: src.ipynb
AIDataSociety/asgmt2/: src.ipynb
AIDataSociety/asgmt3/: classExercise.ipynb  data.xlsx  src.ipynb
AIDataSociety/asgmt4/: src.ipynb
AIDataSociety/class/: Untitled.ipynb  Week1 녹강 강의노트 실습.ipynb  Week2 녹강 강의노트 실습.ipynb  Week2 데이터 시각화 기본 - 인구.ipynb  Week3 과제 우리동네분석.ipynb  Week3 녹강 Pandas 기초.ipynb  Week3 녹강 데이터시각화기초.ipynb  Week3 녹강 리스트 활용하기.ipynb  Week3 온라인 실습.ipynb  Week4 녹강 강의노트 실습.ipynb  Week5 녹강 강의노트 실습.ipynb  Week5 온라인 실습.ipynb  Week6 녹강 WordCloud.ipynb  Week6 온라인 실습.ipynb
AIDataSociety/class/files/: 6주차_코드복사(폰트설치_파일업로드_폰트경로).txt  AI_Wiki.txt  AI_위키.txt  aa.html  exam.txt  exam1.txt  exam2.txt  p.csv  spss 용 2주_자동차_오토바이_자전거(복사증가).xlsx  tree.dot  승객.xlsx
IOTProgramming/: README.md
IOTProgramming/asgmt1GetHost/: gethostbyaddr.c  gethostbyname.c
IOTProgramming/asgmt2ZombieProc/: remove_zombie.c  sigaction.c  zombie_handler.c
IOTProgramming/asgmt3Echo/: echomsg.txt
IOTProgramming/prj1HttpClient/: http_client.c  http_client_bonus.c  prj1.html
IOTProgramming/prj2HttpClientDomain/: http_client_domain.c
IOTProgramming/prj3MulitProcWebServer/: 404.html  index.html  web_server.c
IOTProgramming/prj4RaspberryPi/: 1.c  2.c  3_server.c  4_client.c  4_server.c
IOTProgramming/selfStudy/chat/: client.c  server.c
dataStructure/: README.md
dataStructure/asgmt2HelloWorld/: HelloWorld.cpp
dataStructure/asgmt3FindMax/: array.cpp
dataStructure/asgmt4LinkedList/: LinkedList.cpp
dataStructure/asgmt5BracketChecker/: BracketChecker.cpp
dataStructure/midtermProjectPageRank/: README.md
dataStructure/midtermProjectPageRank/dataset/bicycle/: bicycle_trips_all.tsv  bicycle_trips_over_100.tsv  bicycle_trips_over_50.tsv  (+1 more)
dataStructure/midtermProjectPageRank/src/: MidtermSourceNoWeight.cpp  MidtermSourceWeight.cpp
database/asgmt1/mysql_query_scripts/: create_base_tables.sql  create_foreign_tables.sql  integrated_queries.sql
database/asgmt2/: backup.sql
database/asgmt2/scripts/: 0.sql  1.sql  10.sql  2.sql  4.sql  6.sql  7.sql  9.sql
database/asgmt2/scripts_txt/: 0.txt  10.txt  2.txt  3.txt  5.txt  8.txt  9.txt
database/asgmt3/scripts/: 3.sql  5.sql  7.sql  8.sql
database/asgmt3/scripts_txt/: 1.txt  2.txt  4.txt  6.txt
microProcessor/: Lab1.sh  README.md  gem5_pre.sh  install_gem5.sh
microProcessor/asgmt4AutomateScripts/: blowfishdec_auto.sh  blowfishenc_auto.sh  patricia_auto.sh  susan_auto.sh
operatingSystem/: Makefile_Reference.txt
operatingSystem/Lab10_FileSystem/xv6_ssu_fs/: fs.c  tags
operatingSystem/Lab1_SystemCall/: Makefile  cat.c  exec.c  fork.c  pipe.c
operatingSystem/Lab2_PrintYourName/xv6_ssu_master/: tags
operatingSystem/Lab4_ImplementSysCall/xv6_ssu_syscall/: 1  Makefile  defs.h  proc.c  proc.h  syscall.h  sysproc.c  user.h
operatingSystem/Lab5_Scheduler/xv6_ssu_sched/: Makefile  defs.h  mkfs.c  proc.c  proc.h  syscall.c  sysproc.c  tags  trap.c  user.h
operatingSystem/Lab6_SlabAllocator/xv6_ssu_slab/: main.c  slab.c  sysslab.c  tags
operatingSystem/Lab7_DynamicProcessAllocator/xv6_ssu_dynamic/: main.c  proc.c  slab.c  tags
operatingSystem/Lab8_Concurrency/concurrency/: bounded_buffer.c  counter.c  counter_lock.c
operatingSystem/Lab9_Linked_List/concurrent_linked/: linkedlist.c  tags
sensorMotionRobotEng/: .gitignore  README.md
sensorMotionRobotEng/YOLO_Lab/count_person/: CMakeLists.txt  package.xml
sensorMotionRobotEng/YOLO_Lab/count_person/include/: count_person.hpp
sensorMotionRobotEng/YOLO_Lab/count_person/msg/: message.msg
sensorMotionRobotEng/YOLO_Lab/count_person/src/: count_person.cpp
sensorMotionRobotEng/catkin_ws/: frames.gv
sensorMotionRobotEng/catkin_ws/src/fourth_robot_pkg/fourth_robot_2dnav/: CMakeLists.txt
sensorMotionRobotEng/catkin_ws/src/fourth_robot_pkg/fourth_robot_2dnav_gazebo/: CMakeLists.txt
sensorMotionRobotEng/catkin_ws/src/fourth_robot_pkg/fourth_robot_bringup/: CMakeLists.txt
sensorMotionRobotEng/catkin_ws/src/fourth_robot_pkg/fourth_robot_bringup/launch/sensors/: lrf_merger.launch
sensorMotionRobotEng/catkin_ws/src/fourth_robot_pkg/fourth_robot_driver/: CMakeLists.txt
sensorMotionRobotEng/kalmanFilter/Project1/: Project1.sln  Project1.vcxproj  source.cpp
sensorMotionRobotEng/midterm/turtleCtrl/: CMakeLists.txt  package.xml
sensorMotionRobotEng/rvizConfig/: custom_odom.rviz  fourth_robot_localization.rviz  fourth_robot_mapping.rviz  fourth_robot_move_base.rviz  ur5_description.rviz
webProgramming/asgmt1HTML/: webdeveloper_template.html
webProgramming/asgmt2PersonalProfile/src/: index.html
webProgramming/asgmt3JavaScript/: Assignment_01.html  Assignment_02.html  Assignment_03.html  Assignment_04.html  Assignment_05.html  Assignment_06.html  Assignment_07.html
webProgramming/asgmt4jQuery/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html
(+217 files in other folders)
